load("@rules_cc//cc:defs.bzl", "cc_library")

load("//:BUILD.bzl",
     "BASE_SRCS", "BASE_DEPS",
     "BASE_COPTS", "BASE_INCLUDE_PATHS",
     "BASE_DEFINES", "BASE_LINKOPTS",
     "TIMEOUT",
     "GOPT_VERSION",
     "UNITY_VERSION",
     "UTHASH_VERSION")

SRCS          = BASE_SRCS + [
    "//test:common.c", "//test:common.h",
    "macros.h"
] + select({
    # "//config/clibs/link:shared?": [
    #     "//lib/libmustachios:libmustachios7_s7.c"],
    "//conditions:default": []
})

DEPS          = BASE_DEPS + [
    "//src:mustachios_s7",
    "@sexp_s7//src:sexp_s7",
    "@gopt//:gopt",
    "@unity//src:unity",
    "@uthash//src:uthash"
] + select({
    # "//config/clibs/link:archive?": [
    #     "//lib/libmustachios:mustachios_s7_archive",
    # ],
    "//conditions:default": []
})

INCLUDE_PATHS = BASE_INCLUDE_PATHS + [
    "-Isrc",
    "-Itest",
    "-Iexternal/gopt~{}/src".format(GOPT_VERSION),
    "-Iexternal/unity~{}/src".format(UNITY_VERSION),
    "-Iexternal/uthash~{}/src".format(UTHASH_VERSION),
]

COPTS         = BASE_COPTS + INCLUDE_PATHS

DATA = select({
    # "//config/clibs/link:runtime?": [
    #     "//lib/libmustachios:mustachios_s7"
    # ],
    "//conditions:default": []
})

DEFINES       = BASE_DEFINES
LINKOPTS      = BASE_LINKOPTS


# load("//:BUILD.bzl",
#      "BASE_SRCS", "BASE_DEPS", "BASE_INCLUDE_PATHS",
#      "BASE_COPTS", "BASE_DEFINES", "BASE_LINKOPTS")

# load("//test:BUILD.bzl",
#      "TEST_SRCS", "TEST_DEPS", "TEST_INCLUDE_PATHS",
#      "TEST_COPTS", "TEST_DEFINES", "TEST_LINKOPTS",
#      "TIMEOUT")

# SRCS          = BASE_SRCS + TEST_SRCS + ["macros.h"]

# INCLUDE_PATHS = BASE_INCLUDE_PATHS + TEST_INCLUDE_PATHS + [
#     # "-Ilib/libmustachios/scm/s7"
# ]
# COPTS         = BASE_COPTS + TEST_COPTS + INCLUDE_PATHS
# DEPS          = BASE_DEPS + TEST_DEPS + [
#     # "//lib/libmustachios/scm/s7:mustache_scm"
# ] + select({
#     "//config/clibs/link:archive?": [
#         "//lib/libmustachios:mustachios_s7_archive",
#     ],
#     "//conditions:default": []
# })

# DEFINES       = BASE_DEFINES + TEST_DEFINES
# LINKOPTS      = BASE_LINKOPTS + TEST_LINKOPTS

TAGS = ["mustache", "scm"]
 # + COPTS_TEST + COPTS_S7,
################################################################
test_suite(
    name  = "scm",
    tests = [
        ":comments",
        ":interpolation",
        ":renderers",
        ":sections"
    ]
)

################################################################
# cc_test(
#     name       = "alists",
#     linkstatic = True,
#     srcs       = ["alists_test.c"] + SRCS,
#     defines    = DEFINES + DEFINES_TEST,
#     deps       = DEPS + DEPS_TEST + DEPS_S7,
#     copts      = COPTS + COPTS_TEST + COPTS_S7,
#     linkopts   = LINKOPTS,
#     timeout    = TIMEOUT,
# )

cc_test(
    name       = "comments",
    linkstatic = True,
    srcs       = SRCS + ["mst_scm_comments_test.c"],
    defines    = DEFINES,
    deps       = DEPS,
    copts      = COPTS,
    linkopts   = LINKOPTS,
    timeout    = TIMEOUT,
    tags = TAGS + ["comments"]
)

# cc_test(
#     name       = "delimiters",
#     linkstatic = True,
#     srcs       = SRCS + ["delimiters_test.c"],
#     defines    = DEFINES,
#     deps       = DEPS,
#     copts      = COPTS,
#     linkopts   = LINKOPTS,
#     timeout    = TIMEOUT,
# )

# cc_test( ## NOT SUPPORTED
#     name       = "dynamics",
#     linkstatic = True,
#     srcs       = SRCS+ ["dynamics_test.c"],
#     defines    = DEFINES,
#     deps       = DEPS,
#     copts      = COPTS,
#     linkopts   = LINKOPTS,
#     timeout    = TIMEOUT,
# )

cc_test(
    name       = "interpolation",
    linkstatic = True,
    srcs       = SRCS + ["mst_scm_interpolation_test.c"],
    defines    = DEFINES,
    deps       = DEPS,
    copts      = COPTS,
    linkopts   = LINKOPTS,
    timeout    = TIMEOUT,
    tags = TAGS + ["interpolation"]
)

# cc_test(
#     name       = "inverted",
#     linkstatic = True,
#     srcs       = ["inverted_test.c"] + SRCS,
#     defines    = DEFINES + DEFINES_TEST,
#     deps       = DEPS + DEPS_TEST + DEPS_S7,
#     copts      = COPTS + COPTS_TEST + COPTS_S7,
#     linkopts   = LINKOPTS,
#     timeout    = TIMEOUT,
# )

# cc_test(
#     name       = "lists",
#     linkstatic = True,
#     srcs       = ["lists_test.c"] + SRCS,
#     defines    = DEFINES + DEFINES_TEST,
#     deps       = DEPS + DEPS_TEST + DEPS_S7,
#     copts      = COPTS + COPTS_TEST + COPTS_S7,
#     linkopts   = LINKOPTS,
#     timeout    = TIMEOUT,
# )

# cc_test(
#     name       = "maps",
#     linkstatic = True,
#     srcs       = ["maps_test.c"] + SRCS,
#     defines    = DEFINES + DEFINES_TEST,
#     deps       = DEPS + DEPS_TEST + DEPS_S7,
#     copts      = COPTS + COPTS_TEST + COPTS_S7,
#     linkopts   = LINKOPTS,
#     timeout    = TIMEOUT,
# )

# cc_test(
#     name       = "lambda",
#     linkstatic = True,
#     srcs       = ["lambda_test.c"] + SRCS,
#     defines    = DEFINES + DEFINES_TEST,
#     deps       = DEPS + DEPS_TEST + DEPS_S7,
#     copts      = COPTS + COPTS_TEST + COPTS_S7,
#     linkopts   = LINKOPTS,
#     timeout    = TIMEOUT,
# )

# cc_test(
#     name       = "predicates",
#     linkstatic = True,
#     srcs       = ["predicates_test.c"] + SRCS,
#     defines    = DEFINES + DEFINES_TEST,
#     deps       = DEPS + DEPS_TEST + DEPS_S7,
#     copts      = COPTS + COPTS_TEST + COPTS_S7,
#     linkopts   = LINKOPTS,
#     timeout    = TIMEOUT,
# )

# # test handling of "prefixes", constant text preceding tag and on same line
# cc_test(
#     name       = "prefixes",
#     linkstatic = True,
#     srcs       = ["prefix_test.c"] + SRCS,
#     defines    = DEFINES + DEFINES_TEST,
#     deps       = DEPS + DEPS_TEST + DEPS_S7,
#     copts      = COPTS + COPTS_TEST + COPTS_S7,
#     linkopts   = LINKOPTS,
#     timeout    = TIMEOUT,
# )

# cc_test(
#     name       = "partials",
#     linkstatic = True,
#     srcs       = ["partials_test.c"] + SRCS,
#     defines    = DEFINES + DEFINES_TEST,
#     deps       = DEPS + DEPS_TEST + DEPS_S7,
#     copts      = COPTS + COPTS_TEST + COPTS_S7,
#     linkopts   = LINKOPTS,
#     timeout    = TIMEOUT,
# )

cc_test(
    name       = "renderers",
    linkstatic = True,
    srcs       = SRCS + ["mst_scm_renderers_test.c"],
    defines    = DEFINES,
    deps       = DEPS,
    copts      = COPTS,
    linkopts   = LINKOPTS,
    timeout    = TIMEOUT,
    tags = TAGS + ["renderers"]
)

cc_test(
    name       = "sections",
    linkstatic = True,
    srcs       = SRCS + ["mst_scm_sections_test.c"],
    defines    = DEFINES,
    deps       = DEPS,
    copts      = COPTS,
    linkopts   = LINKOPTS,
    timeout    = TIMEOUT,
    tags = TAGS + ["sections"]
)

# cc_test(
#     name       = "sequences",
#     linkstatic = True,
#     srcs       = ["sequences_test.c"] + SRCS,
#     defines    = DEFINES + DEFINES_TEST,
#     deps       = DEPS + DEPS_TEST + DEPS_S7,
#     copts      = COPTS + COPTS_TEST + COPTS_S7,
#     linkopts   = LINKOPTS,
#     timeout    = TIMEOUT,
# )

# cc_test(
#     name       = "vectors",
#     linkstatic = True,
#     srcs       = ["vectors_test.c"] + SRCS,
#     defines    = DEFINES + DEFINES_TEST,
#     deps       = DEPS + DEPS_TEST + DEPS_S7,
#     copts      = COPTS + COPTS_TEST + COPTS_S7,
#     linkopts   = LINKOPTS,
#     timeout    = TIMEOUT,
# )

