load("@rules_cc//cc:defs.bzl", "cc_library")

load("//:BUILD.bzl",
     "BASE_SRCS", "BASE_DEPS",
     "BASE_COPTS", "BASE_INCLUDE_PATHS",
     "BASE_DEFINES", "BASE_LINKOPTS",
     "TIMEOUT",
     "GOPT_VERSION",
     "UNITY_VERSION",
     "UTHASH_VERSION")

SRCS          = BASE_SRCS + [
    "//test:common.c", "//test:common.h",
    "macros.h"
] + select({
    # "//config/clibs/link:shared?": [
    #     "//lib/libmustachios:libmustachios7_s7.c"],
    "//conditions:default": []
})

DEPS          = BASE_DEPS + [
    "//src:mustachios_s7",
    "@toml_s7//src:toml_s7",
    "@gopt//:gopt",
    "@unity//src:unity",
    "@uthash//src:uthash"
] + select({
    # "//config/clibs/link:archive?": [
    #     "//lib/libmustachios:mustachios_s7_archive",
    # ],
    "//conditions:default": []
})

INCLUDE_PATHS = BASE_INCLUDE_PATHS + [
    "-Isrc",
    "-Itest",
    "-Iexternal/gopt~{}/src".format(GOPT_VERSION),
    "-Iexternal/unity~{}/src".format(UNITY_VERSION),
    "-Iexternal/uthash~{}/src".format(UTHASH_VERSION),
]

COPTS         = BASE_COPTS + INCLUDE_PATHS

DATA = select({
    # "//config/clibs/link:runtime?": [
    #     "//lib/libmustachios:mustachios_s7"
    # ],
    "//conditions:default": []
})

DEFINES       = BASE_DEFINES
LINKOPTS      = BASE_LINKOPTS

TAGS = ["mustache", "toml"]

################################################################
test_suite(
    name  = "toml",
    tests = [
        ":comments",
        ":conversion",
        ":renderers",
        ":interpolation",
    ]
)

################################################################
cc_test(
    name = "comments",
    linkstatic = True,
    srcs = SRCS + ["mst_toml_comments_test.c"],
    copts = COPTS,
    local_defines = DEFINES,
    deps = DEPS,
    data = select({
        # "//config/clibs/link:runtime?": [
        #     "//lib/libmustachios:mustachios_s7"
        # ],
        "//conditions:default": []
    }),
    linkopts = LINKOPTS,
    timeout = TIMEOUT,
    tags = TAGS + ["comments"]
)

cc_test(
    name = "conversion",
    linkstatic = True,
    srcs = SRCS + ["mst_toml_conversion_test.c"],
    copts = COPTS,
    local_defines = DEFINES,
    deps = DEPS,
    data = select({
        # "//config/clibs/link:runtime?": [
        #     "//lib/libmustachios:mustachios_s7"
        # ],
        "//conditions:default": []
    }),
    linkopts = LINKOPTS,
    timeout = TIMEOUT,
    tags = TAGS + ["conversion"]
)

cc_test(
    name = "interpolation",
    linkstatic = True,
    srcs = SRCS + ["mst_toml_interpolation_test.c"],
    copts = COPTS,
    local_defines = DEFINES,
    deps = DEPS,
    data = select({
        # "//config/clibs/link:runtime?": [
        #     "//lib/libmustachios:mustachios_s7"
        # ],
        "//conditions:default": []
    }),
    linkopts = LINKOPTS,
    timeout = TIMEOUT,
    tags = TAGS + ["interpolation"]
)

cc_test(
    name = "renderers",
    linkstatic = True,
    srcs = SRCS + ["mst_toml_renderers_test.c"],
    copts = COPTS,
    local_defines = DEFINES,
    deps = DEPS,
    data = DATA,
    linkopts = LINKOPTS,
    timeout = TIMEOUT,
    tags = TAGS + ["renderers"]
)

################################################################
cc_test(
    name = "cjson_link_archive",
    linkstatic = True,
    srcs = ["cjson_test.c"],
    local_defines = DEFINES,
    deps = DEPS + ["//lib/libmustachios:mustache_s7_archive"],
    copts = COPTS + [
        "-Itest/unit",
        "-Iexternal/libs7/test",
        "-Ilib/libmustachios/mustach",
        "-Iexternal/libs7/lib/libmustachios/mustach",
        # "-Iexternal/mustachios7/lib",
    ],
    linkopts = LINKOPTS,
    timeout = TIMEOUT
)

cc_test(
    name = "cjson_link_shared",
    # linkstatic = True,
    srcs = [
        "cjson_test.c",
        # "//lib/libmustachios:libmustachios7_s7.c"
        # "//lib/libmustachios:mustachios7_s7",
        # "//src:s7"
    ],
    local_defines = DEFINES,
    # deps = DEPS + ["//lib/libmustachios:mustachios7_s7"],
    # data = ["//lib/libmustachios:mustachios7_s7"],
    deps = [
        "//src:s7",
        "//lib/libmustachios:mustachios7_s7",
        "//vendored/gopt",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
    copts = COPTS + [
        "-Itest/unit",
        "-Iexternal/mustachios7/test",
        "-Ilib/libmustachios",
        "-Iexternal/libs7/lib/libmustachios",
    ],
    linkopts = LINKOPTS,
    timeout = TIMEOUT
)

cc_test(
    name = "cjson_link_runtime",
    # linkstatic = True,
    srcs = ["cjson_test.c",
            "//src:libs7.h", "//src:s7.h",
            "//lib/libmustachios:mustachios7_s7",
            "//src:s7"
            ],
    local_defines = DEFINES + ["CLIBS_LINK_RUNTIME"],
    deps = DEPS,
    # data = ["//lib/libmustachios:mustachios7_s7"],
    copts = COPTS + [
        "-Itest/unit",
        "-Ilib/libmustachios",
        "-Iexternal/libs7/lib/libmustachios",
    ],
    linkopts = LINKOPTS,
    timeout = TIMEOUT
)
